Fix forum responsiveness on tablets and mobiles in portrait Remove senseless margin when going responsive

--- a/wwwroot/phpbb/styles/prosilver/theme/common.css
+++ b/wwwroot/phpbb/styles/prosilver/theme/common.css
@@ -179,14 +179,7 @@ ol ol ul, ol ul ul, ul ol ul, ul ul ul {
 	border-radius: 8px;
 	margin: 0 auto;
 	max-width: 1152px;
-	min-width: 625px;
 	padding: 15px;
-}
-
-@media only screen and (max-width: 1220px), only screen and (max-device-width: 1220px) {
-	#wrap {
-		margin: 0 12px;
-	}
 }
 
 #page-body {
